修改了pub目录相对路径

--- a/test_dev/site/views/leapmotion/global/header.tpl.htm
+++ b/test_dev/site/views/leapmotion/global/header.tpl.htm
@@ -44,13 +44,13 @@
 						
 						<li><a href="explore/" class="<?php if ($_GET['app'] == 'explore') { ?>active<?php } ?>"><?php _e('发现'); ?></a></li>
 						
-						<!-- <li><a href="question/square/" class="<?php if ($_GET['app'] == 'question') { ?>active<?php } ?>"><?php _e('问题'); ?></a></li>
+						<!-- <li><a href="question/square/" class="<?php if ($_GET['app'] == 'question') { ?>active<?php } ?>"><?php _e('问题'); ?></a></li> -->
 
-						<li><a href="article/square/" class="<?php if ($_GET['app'] == 'article') { ?>active<?php } ?>"><?php _e('文章'); ?></a></li> -->
+						<li><a href="article/square/" class="<?php if ($_GET['app'] == 'article') { ?>active<?php } ?>"><?php _e('文章'); ?></a></li> 
 						
 						<li><a href="topic/" <?php if ($_GET['app'] == 'topic') { ?>class="active"<?php } ?>><?php _e('话题'); ?></a></li>
 						
-						<li><a href="people/list/" <?php if ($_GET['app'] == 'people') { ?>class="active"<?php } ?>><?php _e('用户'); ?></a></li>
+						<!-- <li><a href="people/list/" <?php if ($_GET['app'] == 'people') { ?>class="active"<?php } ?>><?php _e('用户'); ?></a></li> -->
 						
 						<?php if ($this->user_id) { ?>
 						<li>
